fixed css errors

--- a/app.css
+++ b/app.css
@@ -13,7 +13,7 @@
     /*font-weight: bold;*/
     text-align: center;
     color: red;
-    text-shadow: 2px 2px 2px black	
+    text-shadow: 2px 2px 2px black;
     margin: unset;
  }
 
@@ -81,7 +81,7 @@ body{
     /*font-weight: bold;*/
     text-align: center;
     color: red;
-    text-shadow: 2px 2px 2px black	
+    text-shadow: 2px 2px 2px black;
     margin: unset;
 }
 
@@ -102,6 +102,6 @@ input{
 }
 
 .form-put{
-margin left: 20px
+margin-left: 20px;
 } 
 
